src/test/ui/wf/wf-enum-fields.stderr
error[E0277]: the trait bound `A: std::marker::Copy` is not satisfied
  --> $DIR/wf-enum-fields.rs:12:17
   |
LL | struct IsCopy<T:Copy> {
   | --------------------- required by `IsCopy`
...
LL | enum SomeEnum<A> {
   |               - help: consider restricting this bound: `A: std::marker::Copy`
LL |     SomeVariant(IsCopy<A>)
   |                 ^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
